--- a/public/style/core.css
+++ b/public/style/core.css
@@ -7,3 +7,26 @@ td {
   font-family: Arial; sans-serif;
   font-kerning: none;
 }
+
+.container {
+  margin-left : 50px
+}
+
+.github-corner:hover
+.octo-arm {
+  transform-origin: 130px 106px;
+  animation:octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){
+  .github-corner:hover
+  .octo-arm{animation:none}
+  .github-corner
+  .octo-arm{animation:octocat-wave 560ms ease-in-out}
+}
+
+.svg {
+  fill:#70B7FD;
+  color:#EEEEEE;
+  position: absolute; top: 100; border: 0; right: 0;
+}
